Refactory function Asignate Lv
Documentation swagger controller User , create methods controller User
