# routes/api.php
@@ -29,10 +29,31 @@ Route::prefix('v1')->group(function () {
     //     return $request->user();
     // });
 
-    Route::get('/test/user/{id}', 'Test\TestController@user');
-    Route::get('/test/country/{id}', 'Test\TestController@country');
-    Route::get('/test/cooperative/{id}', 'Test\TestController@cooperative');
-    Route::get('/test/payout/{id}', 'Test\TestController@payout');
-    Route::get('/test/sponsorfollower/{id}', 'Test\TestController@sponsorfollower');
+    // Route::get('/test/user/{id}', 'Test\TestController@user');
+    // Route::get('/test/country/{id}', 'Test\TestController@country');
+    // Route::get('/test/cooperative/{id}', 'Test\TestController@cooperative');
+    // Route::get('/test/payout/{id}', 'Test\TestController@payout');
+    // Route::get('/test/sponsorfollower/{id}', 'Test\TestController@sponsorfollower');
+
+
+    //Route Users
+
+    Route::post('/user/register/', 'User\UserController@store');
+
+    Route::post('/user/register/{token}', 'User\UserController@storeParam');
+
+    Route::get('/user', 'User\UserController@index');
+
+    Route::get('/user/{id}', 'User\UserController@show');
+
+    Route::put('/user/{id}', 'User\UserController@update');
+
+    Route::delete('/user/{id}', 'User\UserController@destroy');
+
+    Route::get('/user/search-sponsor/{id}', 'User\UserController@searchSponsor');
+
+    Route::get('/user/payment-confirm/{user}/{param}', 'User\UserController@paymentConfirme');
+
+
 });
 
